--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "gatsby-source-filesystem": "^4.17.0",
     "gatsby-transformer-sharp": "^4.17.0",
     "materialize-css": "^1.0.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0"
+  },
+  "devDependencies": {
+    "webpack": "^5.73.0"
   }
 }
